--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+h1 {
+  font-family: "Roboto";
   text-align: center;
+  margin-bottom: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text {
+  color: black;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.value {
+  font-size: 50px;
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.info {
+  max-width: 360px;
+  margin: 40px auto 0;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  font-size: 26px;
 }
